<resources>
    <string name="app_name">AppFSI</string>
    <string name="BoutonCo">Connexion</string>
    <string name="Login">Login</string>
    <string name="Mdp">Mdp</string>
    <string name="logo">logo</string>
    <string name="messagewellcome">messagewellcome</string>
    <string name="todo">TODO</string>
    <string name="messageaccueil">TODO</string>
    <string name="BoutonNotes">Mes Notes</string>
    <string name="BoutonInfo">Mes Informations</string>
    <string name="BoutonRetour">Retour</string>
    <string name="BoutonModif">Modifier</string>
    <string name="BoutonLogout">Déconnexion</string>
    <string name="BoutonBilan1">Bilan1</string>
    <string name="BoutonBilan2">Bilan2</string>
    <string name="boutonvalidation">Validé</string>
</resources>