<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/wellcome"
        android:layout_width="367dp"
        android:layout_height="205dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wellcome"
        tools:ignore="ImageContrastCheck" />


    <Button
        android:id="@+id/buttonConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="48dp"
        android:text="@string/BoutonCo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="424dp"
        android:layout_height="133dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/messagewellcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wellcome"
        app:srcCompat="@drawable/phrase1"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="106dp"
        android:layout_height="106dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="196dp"
        android:layout_height="124dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/informatique"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/Login"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        android:textColorHint="#B0BEC5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="17dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Mdp"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        android:textColorHint="#B0BEC5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username1"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>