<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".bilan1">
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="106dp"
        android:layout_height="106dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/buttondeco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginTop="16dp"

        android:text="@string/BoutonLogout"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonretour2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="644dp"
        android:text="@string/BoutonRetour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="213dp"
        android:layout_height="83dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/buttondeco"
        app:srcCompat="@drawable/bilan1" />

    <TextView
        android:id="@+id/notent1"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="27dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <TextView
        android:id="@+id/notdos1"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="27dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notent1" />

    <TextView
        android:id="@+id/notora1"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="21dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notdos1" />

    <TextView
        android:id="@+id/rembil1"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="17dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notora1" />

</androidx.constraintlayout.widget.ConstraintLayout>