<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Informations">


    <TextView
        android:id="@+id/teletu"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="164dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maietu" />

    <TextView
        android:id="@+id/libclas"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="108dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preetu" />

    <TextView
        android:id="@+id/adretu"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="112dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maietu" />

    <TextView
        android:id="@+id/nometu"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/maietu"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="22dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preetu" />

    <TextView
        android:id="@+id/preetu"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="27dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nometu" />

    <TextView
        android:id="@+id/libspe"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maietu" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="106dp"
        android:layout_height="106dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="382dp"
        android:layout_height="140dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="108dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mesinfo"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="TODO" />

    <Button
        android:id="@+id/buttonretour2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="408dp"
        android:text="@string/BoutonRetour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/buttonmodif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="548dp"
        android:text="@string/BoutonModif"
        app:layout_constraintStart_toEndOf="@+id/buttonretour2"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <Button
        android:id="@+id/buttondeco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:text="@string/BoutonLogout"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>